<resources>
    <string name="app_name">Store</string>

    <string name="dangNhap">ĐĂNG NHẬP</string>
    <string name="username">Username: </string>
    <string name="password">Password: </string>

    <array name="loaisach">
        <item>Lựa chọn loại sách</item>
        <item>Truyện</item>
        <item>Học Sinh</item>
        <item>Tài liệu</item>
        <item>Khoa Học</item>
        <item>Kinh Dị</item>
        <item>Tiểu Thuyết</item>
    </array>

    <array name="tensach">
        <item>Chọn tên sách</item>
        <item>Toán</item>
        <item>Ngữ văn</item>
    </array>
    <array name="soan_don">
        <item>Chọn người soạn đơn cần nhận</item>
    </array>

    <array name="resouceThang">
        <item>Tháng 1</item>
        <item>Tháng 2</item>
        <item>Tháng 3</item>
        <item>Tháng 4</item>
        <item>Tháng 5</item>
        <item>Tháng 6</item>
        <item>Tháng 7</item>
        <item>Tháng 8</item>
        <item>Tháng 9</item>
        <item>Tháng 10</item>
        <item>Tháng 11</item>
        <item>Tháng 12</item>
    </array>
    <array name="resouceNam">
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
    </array>
    <string name="user">Người Dùng</string>
    <string name="employee">Nhân Viên</string>
    <string name="blacklist">Danh Sách Đen</string>
    <string name="block">Danh Sách Chặn</string>
    <string name="message">Tin Nhắn</string>
    <string name="hint_user">Nhập tài khoản...</string>
    <string name="hint_pass">Nhập mật khẩu...</string>
    <string name="re_enter">Nhập lại mật khẩu:</string>
    <string name="hint_repass">Nhập mật khẩu...</string>
    <string name="btnAdd">Thêm</string>
    <string name="ch_c_a_h_ng">Chủ Cửa Hàng</string>
    <string name="th_ng_k_doanh_thu">Thống Kê Doanh Thu</string>
    <string name="th_ng_k_nh_gi_c_a_kh_ch">Thống Kê Đánh Giá Của Khách</string>
    <string name="th_ng_k_h_ng_trong_kho">Thống Kê Hàng Trong Kho</string>
    <string name="ng_xu_t">Đăng Xuất</string>
    <string name="doanh_thu">Doanh thu</string>
    <string name="th_ng">Tháng</string>
    <string name="n_m">Năm</string>
    <string name="m_n_h_ng">Mã Đơn Hàng</string>
    <string name="gi_tr_n_h_ng">Giá Trị Đơn Hàng</string>
    <string name="t_ng_doanh_thu_l_0_vn">Tổng Doanh Thu Là: 0 VNĐ</string>
    <string name="yy_mm_dd">yy/mm/dd</string>
    <string name="thong_ke_danh_gia">Thống kê đánh giá</string>
    <string name="th_ng_k_nh_gi_t_t">Thống Kê Đánh Giá Tốt</string>
    <string name="th_ng_k_nh_gi_x_u">Thống Kê Đánh Giá Xấu</string>
    <string name="th_ng_k_theo_ng_y">Thống Kê Theo Ngày</string>
    <string name="th_ng_k_theo_th_ng">Thống Kê Theo Tháng</string>
    <string name="ng_i_gi">Người Đ.Giá</string>
    <string name="s_n_ph_m">Sản Phẩm</string>
    <string name="s_sao">Số Sao</string>
    <string name="th_ng_k_n_h_ng">Thống Kê Đơn Hàng</string>
    <string name="th_ng_k_n_h_ng_b_h_y">Thống Kê Đơn Hàng Bị Hủy</string>
    <string name="s_ti_n_ph_i_tr_cho_n_v_v_n_chuy_n">Số Tiền Phải Trả Cho Đơn Vị Vận Chuyển</string>
    <string name="m">Mã</string>
    <string name="tr_gi">Trị Giá</string>
    <string name="t_nh_tr_ng">Tình Trạng</string>
    <string name="thong_ke_kho">Thống kê kho</string>
    <string name="m_s_n_ph_m">Mã Sản Phẩm</string>
    <string name="t_n_s_n_ph_m">Tên Sản Phẩm</string>
    <string name="s_l_ng">Số Lượng</string>
    <string name="t_l">Tỉ Lệ</string>
    <string name="tien_tra_shipper">Tiền trả shipper</string>
    <string name="s_ti_n_ph_i_tr">Số Tiền Phải Trả</string>
    <string name="t_ng_s_ti_n_ph_i_tr_l_0_vn">Tổng Số Tiền Phải Trả Là: 0 VNĐ</string>
    <string name="doi_mk">Đổi mật khẩu</string>
    <string name="m_t_kh_u_hi_n_t_i">Mật khẩu hiện tại</string>
    <string name="m_t_kh_u_m_i">Mật khẩu mới</string>
    <string name="nh_p_l_i_m_t_kh_u">Nhập lại mật khẩu mới</string>
    <string name="i_m_t_kh_u">Đổi mật khẩu</string>
    <string name="chang_password">Đổi mật khẩu</string>
    <string name="statictis">Thống kê</string>
    <string name="send">Gửi</string>
    <string name="enter_email">Nhập email của bạn ...</string>
    <string name="account">Tài khoản</string>
    <string name="pass">Mật khẩu</string>
    <string name="roles">Lựa chọn quyền truy cập của bạn:</string>
    <string name="forgot_password">Quên mật khẩu</string>
    <string name="contentlogin">Hãy đăng nhập bằng tài khoản mà quản trị viên cấp cho bạn!</string>
    <string name="search">Tìm kiếm...</string>
    <string name="search_btn">Tìm</string>
    <string name="add_email">Nhập email ...</string>
    <string name="add_full_name">Nhập họ tên ...</string>
    <string name="add_birthday">Nhập năm sinh ...</string>
    <string name="add_phone">Nhập số điện thoại ...</string>
    <string name="add_luong_cb">Nhập lương cơ bản ...</string>
    <string name="add_employee">Thêm Nhân Viên</string>
    <string name="email">Email:</string>
    <string name="full_name">Họ và Tên:</string>
    <string name="date">Năm sinh:</string>
    <string name="phone">Điện thoại:</string>
    <string name="luongcb">Lương cơ bản:</string>
    <string name="chucvu">Chức vụ:</string>
    <string name="passMD">Mặc định là 123456</string>
    <string name="passUser">Mật khẩu:</string>
    <string name="enter_pass">Nhập mật khẩu ...</string>
    <string name="name_customer">Tên Khách Hàng:</string>
    <string name="date_">Ngày Sinh:</string>
    <string name="sdt">Số Điện Thoại:</string>
    <string name="rank">Xếp Hạng:</string>
    <string name="address">Địa Chỉ:</string>
    <string name="blacklist_">Danh Sách Đen</string>
    <string name="list_product">Danh sách sản phẩm:</string>
    <string name="shipper">Shipper:</string>
    <string name="name">Nguyễn Trường</string>
    <string name="name_test">Harry Poster</string>
    <string name="address_test">Linh xuân - Thủ đức</string>
    <string name="in_transit">Đơn Hàng Đang Giao</string>
    <string name="total">Tổng cộng:</string>
    <string name="money">100000đ</string>
    <string name="confirm">Xác nhận</string>
    <string name="unpacked">Chưa Đóng Gói</string>
    <string name="packaged">Đã Đóng Gói</string>
    <string name="InTransit">Đang Vận Chuyển</string>
    <string name="delivered">Đã Giao</string>
    <string name="cancel">Đơn Bị Huỷ</string>
    <string name="NhanHangTuKhoa">Nhận Hàng</string>
    <string name="logout">Đăng Xuất</string>
    <string name="text_shipper_layout">Bấm vào để chọn shipper giao hàng!</string>
    <string name="order_unpacked">Các Đơn Hàng Chưa Đóng Gói</string>
    <string name="chang_password_title">Đổi Mật Khẩu</string>
    <string name="hang_ton">Hàng Tồn Kho</string>
    <string name="name_category">Tên loại sách:</string>
    <string name="inport_goods">Nhập Hàng</string>
    <string name="add">Thêm</string>
    <string name="product_name">"Tên Sản Phẩm: "</string>
    <string name="product_gia">Giá Sản Phẩm:</string>
    <string name="author">"Tác Giả: "</string>
    <string name="category">Thể Loại:</string>
    <string name="mota">"Mô Tả: "</string>
    <string name="xem_don_hang_da_xuat">Xem Lại Hàng Đã Xuất</string>
    <string name="no_confirm">Chưa xác nhận</string>
    <string name="num">Số lượng: 20</string>
    <string name="name_lich_su">Lịch sử</string>
    <string name="customer">Khách Hàng</string>
    <string name="close">Đóng</string>
    <string name="empty_field">Không được để trống trường này!</string>
    <string name="login_failed">Sai tài khoản hoặc mật khẩu!</string>
    <string name="nhap_ngay_de_thong_ke">Vui lòng nhập ngày để thống kê!</string>
    <string name="chon_phuong_thuc_de_thong_ke">Vui lòng chọn phương thức để thống kê!</string>
    <string name="change_pass_failed">Đổi mật khẩu không thành công!</string>
    <string name="confirm_pass">Mật khẩu nhập lại không khớp!</string>
    <string name="change_pass_success">Đổi mật khẩu thành công!</string>
    <string name="pass_hientai">Mật khẩu hiện tại không đúng!</string>
    <string name="non_select">Vui lòng chọn sách cần nhập!</string>
    <string name="non_select_product">Chưa có sản phẩm nào!</string>
    <string name="non_select_picture">Bạn chưa chọn ảnh!</string>
    <string name="add_failed">Có lỗi xảy ra, thêm sản phẩm không thành công!</string>
    <string name="add_product_success">Thêm sản phẩm thành công!</string>
    <string name="update_product_success">Cập nhật sản phẩm thành công!</string>
    <string name="update_product_failed">Có sản phẩm xảy ra, cập nhật sản phẩm không thành công!</string>
    <string name="enter_text">Vui lòng nhập đầy đủ thông tin!</string>
    <string name="empty_inbox">Vui lòng nhập tin nhắn cần gửi!</string>
    <string name="signup_success">Đăng ký không thành công!</string>
    <string name="update_failed">Cập nhật không thành công!</string>
    <string name="chinh_sua_thong_tin">Chỉnh sửa thông tin</string>
</resources>