<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChuCuaHang.ChuCuaHang_ManHinhThongKeKho">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toobar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#FF9800"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/thong_ke_kho" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/styleTableData2"
            android:text="@string/m_s_n_ph_m" />

        <TextView
            style="@style/styleTableData2"
            android:text="@string/t_n_s_n_ph_m" />

        <TextView
            style="@style/styleTableData2"
            android:text="@string/s_l_ng" />
        <TextView
            style="@style/styleTableData2"
            android:text="@string/t_l" />
    </LinearLayout>

    <ListView
        android:id="@+id/lvThongKeKho"
        android:layout_width="match_parent"
        android:layout_height="fill_parent" />

</LinearLayout>