<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChuCuaHang.ChuCuaHang_ManHinhThongKeDoanhThu">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toobar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#FF9800"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/th_ng_k_doanh_thu" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="@dimen/_70"
        android:orientation="vertical">

        <Button
            android:id="@+id/TKDTthongkedonhang"
            style="@style/buttonStyle"
            android:text="@string/th_ng_k_n_h_ng" />

        <Button
            android:id="@+id/TKDTthongkedonhangbihuy"
            style="@style/buttonStyle"
            android:text="@string/th_ng_k_n_h_ng_b_h_y" />

        <Button
            android:id="@+id/TKDTsotientrachovanchuyen"
            style="@style/buttonStyle"
            android:text="@string/s_ti_n_ph_i_tr_cho_n_v_v_n_chuy_n" />

        <Button
            android:id="@+id/TKDTdoanhthu"
            style="@style/buttonStyle"
            android:text="@string/doanh_thu" />
    </LinearLayout>
</LinearLayout>