<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <ImageView
        android:id="@+id/TKTHImageitemViewSanPham"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="3"/>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_marginStart="10dp"
        android:layout_height="match_parent"
        android:layout_weight="7"
        android:orientation="vertical">
        <TextView
            android:id="@+id/TKTHTextviewitemTenSanPham"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/product_name"/>
        <TextView
            android:id="@+id/TKTHTextviewitemGiaSanPham"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/product_gia"/>

        <TextView
            android:id="@+id/TKTHTextviewitemTacGia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/TKTHTextviewitemTheLoai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/category"/>
        <TextView
            android:id="@+id/TKTHTextviewitemMoTa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/mota"/>

    </LinearLayout>
</LinearLayout>