<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChuCuaHang.ChuCuaHang_ManHinhChinh">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image_ChuCuaHang"
            android:layout_width="@dimen/_120"
            android:layout_height="@dimen/_120"
            android:src="@drawable/chucuahang"
            app:civ_border_color="@color/black"
            app:civ_border_width="@dimen/_2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ch_c_a_h_ng"
            android:layout_marginTop="50dp"
            android:textColor="@color/black"
            android:textSize="@dimen/_30"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:gravity="center|top"
        android:orientation="vertical">

        <Button
            android:id="@+id/CCCthongkedoanhthu"
            style="@style/buttonStyle"
            android:text="@string/th_ng_k_doanh_thu" />

        <Button
            android:id="@+id/CCCthongkedanhgia"
            style="@style/buttonStyle"
            android:text="@string/th_ng_k_nh_gi_c_a_kh_ch" />

        <Button
            android:id="@+id/CCCthongkehangtrongkho"
            style="@style/buttonStyle"
            android:text="@string/th_ng_k_h_ng_trong_kho" />

        <Button
            android:id="@+id/btnChangepass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/chang_password" />

        <Button
            android:id="@+id/btnLoout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/ng_xu_t" />
    </LinearLayout>

</LinearLayout>