<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="match_parent"    xmlns:app="http://schemas.android.com/apk/res-auto"    android:orientation="vertical">    <androidx.appcompat.widget.Toolbar        android:id="@+id/toobar"        android:layout_width="match_parent"        android:layout_height="?attr/actionBarSize"        android:background="#FF9800"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toTopOf="parent"        app:title="@string/add_employee" />    <LinearLayout        android:layout_width="match_parent"        android:layout_height="0dp"        android:layout_weight="2"        android:gravity="center">        <ImageView            android:layout_width="100sp"            android:layout_height="100sp"            android:clickable="true"            android:src="@drawable/user"            tools:ignore="SpeakableTextPresentCheck" />    </LinearLayout>    <LinearLayout        android:layout_width="match_parent"        android:layout_height="0dp"        android:layout_weight="11"        android:orientation="vertical">        <LinearLayout            android:layout_width="match_parent"            android:layout_height="0dp"            android:layout_weight="1"            android:orientation="horizontal">            <TextView                android:layout_width="0dp"                android:layout_weight="1"                android:layout_height="wrap_content"                android:layout_gravity="center"                android:text="@string/email"                android:paddingStart="10dp"                android:textSize="18sp" />            <EditText                android:id="@+id/txtemail"                android:layout_width="0dp"                android:layout_weight="2"                android:layout_height="wrap_content"                android:layout_gravity="center"                android:gravity="right"                android:hint="@string/add_email"                android:paddingEnd="20dp"                android:inputType="textEmailAddress"                android:minHeight="48dp"                android:imeOptions="actionNext" />        </LinearLayout>        <LinearLayout            android:layout_width="match_parent"            android:layout_height="0dp"            android:layout_weight="1"            android:orientation="horizontal">            <TextView                android:layout_width="0dp"                android:layout_height="wrap_content"                android:layout_gravity="center"                android:layout_weight="1"                android:paddingStart="10dp"                android:text="@string/passUser"                android:textSize="18sp" />            <EditText                android:id="@+id/txtpass"                android:layout_width="0dp"                android:layout_weight="2"                android:layout_height="wrap_content"                android:layout_gravity="center"                android:gravity="right"                android:inputType="text"                android:paddingEnd="20dp"                android:minHeight="48dp"                android:hint="@string/enter_pass"                android:imeOptions="actionNext" />        </LinearLayout>        <LinearLayout            android:layout_width="match_parent"            android:layout_height="0dp"            android:layout_weight="1"            android:orientation="horizontal">            <TextView                android:layout_width="0dp"                android:layout_weight="1"                android:layout_height="wrap_content"                android:layout_gravity="center"                android:text="@string/full_name"                android:textSize="18sp"                android:paddingStart="10dp" />            <EditText                android:id="@+id/txtname"                android:layout_width="0dp"                android:layout_weight="2"                android:layout_height="wrap_content"                android:layout_gravity="center"                android:gravity="right"                android:imeOptions="actionNext"                android:paddingEnd="20dp"                android:hint="@string/add_full_name"                android:inputType="text"                android:minHeight="48dp" />        </LinearLayout>        <LinearLayout            android:layout_width="match_parent"            android:layout_height="0dp"            android:layout_weight="1"            android:orientation="horizontal">            <TextView                android:layout_width="0dp"                android:layout_weight="1"                android:layout_height="wrap_content"                android:layout_gravity="center"                android:textSize="18sp"                android:paddingStart="10dp"                android:text="@string/date" />            <EditText                android:id="@+id/txtbirth"                android:layout_width="0dp"                android:layout_weight="2"                android:layout_height="wrap_content"                android:layout_gravity="center"                android:gravity="right"                android:imeOptions="actionNext"                android:hint="@string/add_birthday"                android:paddingEnd="20dp"                android:inputType="date"                android:minHeight="48dp"/>        </LinearLayout>        <LinearLayout            android:layout_width="match_parent"            android:layout_height="0dp"            android:layout_weight="1"            android:orientation="horizontal">            <TextView                android:layout_width="0dp"                android:layout_weight="1"                android:layout_height="wrap_content"                android:layout_gravity="center"                android:textSize="18sp"                android:paddingStart="10dp"                android:text="@string/phone" />            <EditText                android:id="@+id/txtsdt"                android:layout_width="0dp"                android:layout_weight="2"                android:layout_height="wrap_content"                android:layout_gravity="center"                android:gravity="right"                android:inputType="phone"                android:imeOptions="actionNext"                android:hint="@string/add_phone"                android:paddingEnd="20dp"                android:minHeight="48dp"/>        </LinearLayout>        <LinearLayout            android:layout_width="match_parent"            android:layout_height="0dp"            android:layout_weight="1"            android:orientation="horizontal">            <TextView                android:layout_width="0dp"                android:layout_weight="1"                android:layout_height="wrap_content"                android:layout_gravity="center"                android:textSize="18sp"                android:paddingStart="10dp"                android:text="@string/luongcb" />            <EditText                android:id="@+id/txtluongCB"                android:layout_width="0dp"                android:layout_weight="2"                android:layout_height="wrap_content"                android:layout_gravity="center"                android:gravity="right"                android:inputType="number"                android:paddingEnd="20dp"                android:imeOptions="actionDone"                android:hint="@string/add_luong_cb"                android:minHeight="48dp"/>        </LinearLayout>        <LinearLayout            android:layout_width="match_parent"            android:layout_height="0dp"            android:layout_weight="1"            android:orientation="horizontal">            <TextView                android:layout_width="0dp"                android:layout_weight="1"                android:layout_height="wrap_content"                android:layout_gravity="center"                android:textSize="18sp"                android:paddingStart="10dp"                android:text="@string/chucvu" />            <Spinner                android:id="@+id/spinnerAddEmployee"                android:layout_width="0dp"                android:layout_height="wrap_content"                android:layout_gravity="center"                android:layout_weight="2"                android:minHeight="48dp"                tools:ignore="SpeakableTextPresentCheck" />        </LinearLayout>    </LinearLayout>    <LinearLayout        android:layout_width="match_parent"        android:layout_height="0dp"        android:layout_weight="2">        <Button            android:id="@+id/btnAddEmploeeScreen"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:minHeight="48dp"            android:layout_gravity="center"            android:layout_marginStart="100dp"            android:layout_marginEnd="100dp"            android:text="@string/btnAdd" />    </LinearLayout></LinearLayout>