<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChuCuaHang.ChuCuaHang_ManHinhThongKeDanhGiaXau">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toobar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/cam"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/th_ng_k_nh_gi_x_u" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rdbTKDGXthongketheongay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/th_ng_k_theo_ng_y" />

            <RadioButton
                android:id="@+id/rdbTKDGXthongketheothang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/th_ng_k_theo_th_ng" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtTKDGXthongketheongay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:background="@drawable/vien1"
                android:enabled="false"
                android:gravity="center"
                android:hint="@string/yy_mm_dd"
                android:layout_marginStart="10dp"
                android:inputType="date" />

            <ImageView
                android:id="@+id/dateTimePickerDanhGiaXau"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_baseline_calendar_today_24" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/th_ng" />

            <Spinner
                android:id="@+id/spnTKDGXthang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/vien1" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/n_m" />

            <Spinner
                android:id="@+id/spnTKDGXnam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/vien1" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnTKDGXThongKe"
            style="@style/styleButtonThongKe" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/styleTableData2"
            android:text="@string/ng_i_gi" />

        <TextView
            style="@style/styleTableData2"
            android:text="@string/s_n_ph_m" />

        <TextView
            style="@style/styleTableData2"
            android:text="@string/s_sao" />
    </LinearLayout>

    <ListView
        android:id="@+id/lvthongkedanhgiaxau"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10" />
</LinearLayout>