<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbChangePassword"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/cam"
        app:title="@string/doi_mk" />

    <EditText
        android:id="@+id/edt_current_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_50"
        android:layout_marginTop="@dimen/_200"
        android:layout_marginEnd="@dimen/_50"
        android:focusable="true"
        android:hint="@string/m_t_kh_u_hi_n_t_i"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:layout_gravity="center"
        android:minHeight="@dimen/_48"
        android:paddingStart="@dimen/_10" />

    <EditText
        android:id="@+id/edt_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_50"
        android:layout_marginTop="@dimen/_20"
        android:layout_marginEnd="@dimen/_50"
        android:hint="@string/m_t_kh_u_m_i"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:layout_gravity="center"
        android:minHeight="@dimen/_48"
        android:paddingStart="@dimen/_10" />

    <EditText
        android:id="@+id/edt_re_enter_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_50"
        android:layout_marginTop="@dimen/_20"
        android:layout_marginEnd="@dimen/_50"
        android:hint="@string/nh_p_l_i_m_t_kh_u"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:layout_gravity="center"
        android:minHeight="@dimen/_48"
        android:paddingStart="@dimen/_10" />

    <Button
        android:id="@+id/btnChangePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_gravity="center"
        android:text="@string/i_m_t_kh_u" />
</LinearLayout>