<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChuCuaHang.ChuCuaHang_ManHinhThongKeDanhGiaKhachHang">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toobar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/cam"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/thong_ke_danh_gia" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="@dimen/_70"
        android:orientation="vertical">

        <Button
            android:id="@+id/TKDGthongkedanhgiaTot"
            style="@style/buttonStyle"
            android:text="@string/th_ng_k_nh_gi_t_t" />

        <Button
            android:id="@+id/TKDGthongkedanhgiaxau"
            style="@style/buttonStyle"
            android:text="@string/th_ng_k_nh_gi_x_u" />

    </LinearLayout>
</LinearLayout>